[project]
name = "number-guesser"
version = "0.1.0"
description = "Tutorial 1: Number Guesser with Binary Rewards"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
