[project]
name = "cartpole-tutorial"
version = "1.0.0"
description = "Tutorial 3: CartPole Environment Wrapper for Reinforcement Learning"
authors = [
    {name = "Manus AI"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "gymnasium>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
